--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
 
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-simplexml:2.4.0'
+    implementation 'org.jsoup:jsoup:1.11.3'
 
 
     testImplementation 'junit:junit:4.12'
