--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,8 @@
 apply plugin: 'com.android.application'
-
+repositories {
+    //...
+    maven { url "https://jitpack.io" }
+}
 android {
     compileSdkVersion 28
     defaultConfig {
@@ -26,6 +29,7 @@ dependencies {
 
     // Room components
     implementation "android.arch.persistence.room:runtime:1.1.1"
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
     androidTestImplementation "android.arch.persistence.room:testing:1.1.1"
 
@@ -33,7 +37,7 @@ dependencies {
     implementation "android.arch.lifecycle:extensions:1.1.1"
     annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
 
-    implementation ("com.github.bumptech.glide:glide:4.8.0") {
+    implementation("com.github.bumptech.glide:glide:4.8.0") {
         exclude group: "com.android.support"
     }
 
@@ -41,6 +45,10 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-simplexml:2.4.0'
     implementation 'org.jsoup:jsoup:1.11.3'
 
+
+    implementation("com.github.ViksaaSkool:AwesomeSplash:v1.0.0") {
+        exclude group: "com.android.support"
+    }
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
