--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,10 +23,11 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.google.android.gms:play-services-ads:15.0.1'
+
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation "com.android.support:cardview-v7:28.0.0"
     implementation 'com.android.support:recyclerview-v7:28.0.0'
-
     // Room components
     implementation "android.arch.persistence.room:runtime:1.1.1"
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
@@ -49,6 +50,8 @@ dependencies {
     implementation("com.github.ViksaaSkool:AwesomeSplash:v1.0.0") {
         exclude group: "com.android.support"
     }
+
+
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
