--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     // Room components
     implementation "android.arch.persistence.room:runtime:1.1.1"
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'com.android.support:support-v4:28.0.0'
     annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
     androidTestImplementation "android.arch.persistence.room:testing:1.1.1"
 
@@ -50,6 +51,8 @@ dependencies {
     implementation("com.github.ViksaaSkool:AwesomeSplash:v1.0.0") {
         exclude group: "com.android.support"
     }
+    implementation 'com.github.devlight.navigationtabstrip:navigationtabstrip:1.0.4'
+
 
 
 
