--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.google.android.gms:play-services-ads:15.0.1'
+    implementation 'com.google.android.gms:play-services-ads:17.1.1'
 
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation "com.android.support:cardview-v7:28.0.0"
@@ -55,6 +55,7 @@ dependencies {
     implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0-alpha-14'
 
 
+    implementation 'com.pierfrancescosoffritti.androidyoutubeplayer:core:8.0.1'
 
 
 
